* Fixed spelling errors on "allow to" in plugins descriptions, and "GTK2+" to
    more correct "GTK+".
* Fixed battery indication when charge_full and energy_full are not available.
* Corrected scaling of volume plugin for HiDPI monitors.
* Fixed connection name dropdown list in netstatus plugin.
* Added option to battery monitor to hide number of battery in tooltip.

0.10.0
-------------------------------------------------------------------------
* Fixed delayed application of font cnahges on dclock and weather plugins.
* Allowed switching workplaces by scrolling over the pager.
* Added new API: lxpanel_draw_label_text_with_color().
* Fixed not-applicable font setting on thermal plugin.
* Fixed crash on right-click task button after some task was killed using menu
    on another task button.
* Fixed crash after color was removed from monitor plugin configuration.
* Aligned used memory calculation in lxpanel monitor with 'free' command line
    utility.
* Added possibility to use few weather providers for weather widget.
* Disabled Yahoo! Weather because they removed free API support.
* Added OpenWeatherMap weather provider.
* Fixed wrong application position on taskbar in multihead configuration.
* Fixed battery color (must be green) when battery is fully charged.
* Fixed crash at task plugin when all windows lose focus.
* Disambiguated keyboard layout names to follow variants.

0.9.3
-------------------------------------------------------------------------
* Finally fixed battery calculations, it missed Power so left time was
    always at zero.
* Fixed task window raising on drop file on it (was broken since 0.9.0).

0.9.2
-------------------------------------------------------------------------
* Fixed battery selection if battery detached but another is available.
* Fixed battery percentage calculations if charge isn't available but
    energy is, it appears broken in 0.9.0.
* Fixed wrong state change on task button when hovered, it shouldn't